fixed background as well as added new background photo. Fixed the spacing on the Navbar and the Footer

--- a/main_portfolio/src/App.css
+++ b/main_portfolio/src/App.css
@@ -36,3 +36,9 @@
     transform: rotate(360deg);
   }
 }
+
+#mainBackground {
+  /* background-color:#282c34; */
+  background-image: url("https://miro.medium.com/max/1501/1*dP81IJq-tGFxy1rIK3RYsg.png");
+  height: 100vh;
+}
